// Creating tables
Table school {
  id int [pk, increment]
  name varchar
  address_line_1 varchar
  address_line_2 varchar
  suburb varchar
  state varchar
  country varchar
  postcode int
  coordinates string
  created_at timestamp
  updated_at timestamp
}

Table events {
  id int [pk, increment]
  event_type_id int
  name varchar
  description text
  date_time timestamp
  venue_id int
  distance_from_school float
  duration_from_school float
  created_at timestamp
  updated_at timestamp
}

Table venues {
  id int [pk, increment]
  name varchar
  address_line_1 varchar
  address_line_2 varchar
  suburb varchar
  state varchar
  country varchar
  postcode int
  coordinates string
  created_at timestamp
  updated_at timestamp
}

Table event_types {
  id int [pk, increment]
  name varchar
  created_at timestamp
  updated_at timestamp
 }

Table organizers {
  id int [pk, increment]
  name varchar
  created_at timestamp
  updated_at timestamp
}

Table event_organizers {
  id int [pk, increment]
  event_id int
  organizer_id  int
  created_at timestamp
  updated_at timestamp
}

Table event_participants {
  id int [pk, increment]
  event_id int
  user_id int
  paid int
  attended int
  created_at timestamp
  updated_at timestamp
}

Table users {
  id int [pk, increment]
  name varchar
  user_type_id int
  created_at timestamp
  updated_at timestamp
}

Table user_types {
  id int [pk, increment]
  name varchar
  created_at timestamp
  updated_at timestamp
}

// Creating references
Ref: events.event_type_id > event_types.id
Ref: events.venue_id > venues.id
Ref: event_participants.event_id > events.id
Ref: event_participants.user_id > users.id
Ref: users.user_type_id > user_types.id
Ref: event_organizers.event_id > events.id
Ref: event_organizers.organizer_id > organizers.id
